4.x fix pinned meter type (#9657)
* Fix error in looking up the recent-pinned virtual threads timer

* Improve tag handling for timer look-up

* Review comment