@@ -17,8 +17,10 @@ package io.helidon.metrics.systemmeters;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.Consumer;
 
 import io.helidon.common.LazyValue;
@@ -27,6 +29,7 @@ import io.helidon.metrics.api.Meter;
 import io.helidon.metrics.api.Metrics;
 import io.helidon.metrics.api.MetricsConfig;
 import io.helidon.metrics.api.MetricsFactory;
+import io.helidon.metrics.api.SystemTagsManager;
 import io.helidon.metrics.api.Timer;
 import io.helidon.metrics.spi.MetersProvider;
 
@@ -129,10 +132,13 @@ public class VThreadSystemMetersProvider implements MetersProvider {
         });
     }
 
-    private Timer findPinned() {
-        var result = Metrics.globalRegistry().timer(METER_NAME_PREFIX + PINNED, List.of());
+    // visible for testing
+    Timer findPinned() {
+        var result = Metrics.globalRegistry().timer(METER_NAME_PREFIX + RECENT_PINNED,
+                                                    SystemTagsManager.instance().withScopeTag(Collections.emptyList(),
+                                                                                              Optional.of(METER_SCOPE)));
         if (result.isEmpty()) {
-            throw new IllegalStateException(METER_NAME_PREFIX + "pinned meter expected but not registered");
+            throw new IllegalStateException(METER_NAME_PREFIX + RECENT_PINNED + " meter expected but not registered");
         }
         return result.get();
     }
